--- a/ui/package.json
+++ b/ui/package.json
@@ -12,15 +12,11 @@
     "postinstall": "opencollective-postinstall"
   },
   "dependencies": {
-    "@antv/data-set": "^0.10.1",
-    "@handsontable-pro/vue": "^3.1.1",
-    "@handsontable/vue": "^4.1.0",
-    "ant-design-vue": "^1.3.15",
+    "@antv/data-set": "^0.10.2",
+    "ant-design-vue": "^1.4.2",
     "axios": "^0.19.0",
-    "core-js": "^2.6.5",
+    "core-js": "^3.1.2",
     "enquire.js": "^2.1.6",
-    "handsontable": "^7.1.1",
-    "handsontable-pro": "^6.2.3",
     "js-cookie": "^2.2.0",
     "json2csv": "^4.5.2",
     "lodash.get": "^4.4.2",
@@ -38,33 +34,37 @@
     "vue-router": "^3.0.1",
     "vue-svg-component-runtime": "^1.0.1",
     "vuedraggable": "^2.23.0",
-    "vuex": "^3.1.0",
+    "vuex": "^3.1.1",
     "wangeditor": "^3.1.1",
-    "xlsx": "latest"
+    "xlsx": "latest",
+    "@handsontable-pro/vue": "^3.1.1",
+    "@handsontable/vue": "^4.1.1",
+    "handsontable": "^7.2.2",
+    "handsontable-pro": "^6.2.3"
   },
   "devDependencies": {
-    "@ant-design/colors": "^3.1.0",
-    "@babel/polyfill": "^7.2.5",
-    "@vue/cli-plugin-babel": "^3.7.0",
-    "@vue/cli-plugin-eslint": "^3.7.0",
-    "@vue/cli-plugin-unit-jest": "^3.7.0",
-    "@vue/cli-service": "^3.7.0",
+    "@ant-design/colors": "^3.2.1",
+    "@vue/cli-plugin-babel": "^4.0.4",
+    "@vue/cli-plugin-eslint": "^4.0.4",
+    "@vue/cli-plugin-router": "^4.0.4",
+    "@vue/cli-plugin-unit-jest": "^4.0.4",
+    "@vue/cli-plugin-vuex": "^4.0.4",
+    "@vue/cli-service": "^4.0.4",
     "@vue/eslint-config-standard": "^4.0.0",
-    "@vue/test-utils": "^1.0.0-beta.20",
-    "babel-core": "7.0.0-bridge.0",
+    "@vue/test-utils": "^1.0.0-beta.29",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^23.6.0",
-    "babel-plugin-import": "^1.11.0",
-    "eslint": "^5.8.0",
+    "babel-plugin-import": "^1.12.2",
+    "babel-plugin-transform-remove-console": "^6.9.4",
+    "eslint": "^5.16.0",
     "eslint-plugin-html": "^5.0.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "less": "^3.8.1",
-    "less-loader": "^4.1.0",
-    "opencollective": "^1.0.3",
-    "opencollective-postinstall": "^2.0.2",
+    "eslint-plugin-vue": "^5.2.3",
+    "less": "^3.0.4",
+    "less-loader": "^5.0.0",
+    "vue-template-compiler": "^2.6.10",
     "vue-svg-icon-loader": "^2.1.1",
-    "vue-template-compiler": "^2.6.7",
-    "webpack-theme-color-replacer": "^1.2.15"
+    "webpack-theme-color-replacer": "^1.2.17",
+    "opencollective": "^1.0.3",
+    "opencollective-postinstall": "^2.0.2"
   },
   "eslintConfig": {
     "root": true,
