--- a/cmdb-api/Pipfile
+++ b/cmdb-api/Pipfile
@@ -26,6 +26,7 @@ Flask-Bcrypt = "==1.0.1"
 Flask-Cors = ">=3.0.8"
 ldap3 = "==2.9.1"
 pycryptodome = "==3.12.0"
+hvac = "==1.2.1"
 # Caching
 Flask-Caching = ">=1.0.0"
 # Environment variable parsing
