--- a/cmdb-api/requirements.txt
+++ b/cmdb-api/requirements.txt
@@ -18,6 +18,7 @@ Flask-RESTful==0.3.10
 Flask-SQLAlchemy==2.5.0
 future==0.18.3
 gunicorn==21.0.1
+hvac==1.2.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jinja2schema==0.1.4
