--- a/.github/ISSUE_TEMPLATE/bug.yaml
+++ b/.github/ISSUE_TEMPLATE/bug.yaml
@@ -18,7 +18,7 @@ body:
     validations:
       required: false
   - type: dropdown
-      id: type
+      id: aspects
       attributes:
         label: bug is related to UI or API aspects?
         multiple: true
