add .github templates

--- a/.github/ISSUE_TEMPLATE/consultation.yaml
+++ b/.github/ISSUE_TEMPLATE/consultation.yaml
@@ -17,9 +17,8 @@ body:
       placeholder: ex. email@example.com
     validations:
       required: false
-
   - type: textarea
-    id: describe the problem
+    id: question
     attributes:
       label: What is your question?
       description: Also tell us, how can we help?
