--- a/.github/ISSUE_TEMPLATE/feature.yaml
+++ b/.github/ISSUE_TEMPLATE/feature.yaml
@@ -26,7 +26,7 @@ body:
         - UI
         - API
   - type: textarea
-    id: describe the feature
+    id: feature
     attributes:
       label: What is your advice?
       description: Also tell us, what did you expect to happen?
