--- a/.github/ISSUE_TEMPLATE/bug.yaml
+++ b/.github/ISSUE_TEMPLATE/bug.yaml
@@ -26,7 +26,7 @@ body:
         - UI
         - API
   - type: textarea
-    id: what-happened
+    id: happened
     attributes:
       label: What happened?
       description: Also tell us, what did you expect to happen?
