--- a/.github/ISSUE_TEMPLATE/feature.yaml
+++ b/.github/ISSUE_TEMPLATE/feature.yaml
@@ -34,11 +34,11 @@ body:
       value: "everyone wants this feature!"
     validations:
       required: true
-  - type: textarea
+  - type: input
     id: version
     attributes:
       label: Version
       description: What version of our software are you running?
-      value: "2.3.5"
+      value: "newest"
     validations:
       required: true
