--- a/cmdb-api/requirements.txt
+++ b/cmdb-api/requirements.txt
@@ -30,7 +30,6 @@ marshmallow==2.20.2
 more-itertools==5.0.0
 msgpack-python==0.5.6
 Pillow==9.3.0
-pycryptodome==3.12.0
 cryptography==41.0.2
 PyJWT==2.4.0
 PyMySQL==1.1.0
@@ -50,3 +49,5 @@ Werkzeug==2.3.6
 WTForms==3.0.0
 shamir~=17.12.0
 hvac~=2.0.0
+pycryptodomex>=3.19.0
+colorama>=0.4.6
