perf(secrets): review

--- a/cmdb-api/Pipfile
+++ b/cmdb-api/Pipfile
@@ -36,7 +36,7 @@ marshmallow = "==2.20.2"
 celery = ">=5.3.1"
 celery_once = "==3.0.1"
 more-itertools = "==5.0.0"
-kombu = "==5.3.1"
+kombu = ">=5.3.1"
 # common setting
 timeout-decorator = "==0.5.0"
 WTForms = "==3.0.0"
