--- a/cmdb-api/requirements.txt
+++ b/cmdb-api/requirements.txt
@@ -23,7 +23,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 jinja2schema==0.1.4
 jsonschema==4.18.0
-kombu==5.3.1
+kombu>=5.3.1
 Mako==1.2.4
 MarkupSafe==2.1.3
 marshmallow==2.20.2
