--- a/cmdb-api/.env
+++ b/cmdb-api/.env
@@ -2,6 +2,6 @@
 FLASK_APP=autoapp.py
 FLASK_DEBUG=1
 FLASK_ENV=development
-GUNICORN_WORKERS=2
+GUNICORN_WORKERS=1
 LOG_LEVEL=debug
-SECRET_KEY='<YourSecretKey>'
+SECRET_KEY='sddfdsjksdgsdfsd###$afhkdsjf12323'
