--- a/docker/Dockerfile-UI
+++ b/docker/Dockerfile-UI
@@ -1,7 +1,5 @@
 # ================================= UI ================================
-#FROM docker.m.daocloud.io/node:16.0.0-alpine AS builder
-ARG NODE_IMAGE_VERSION=16.20
-FROM node:${NODE_IMAGE_VERSION} AS builder
+FROM node:16.20 AS builder
 
 LABEL description="cmdb-ui"
 
@@ -11,8 +9,7 @@ WORKDIR /data/apps/cmdb-ui
 
 RUN sed -i "s#http://127.0.0.1:5000##g" .env && yarn install  && yarn build
 
-FROM docker.m.daocloud.io/library/nginx:1.21.4 AS cmdb-ui
-#FROM nginx:1.21.4 AS cmdb-ui
+FROM nginx:1.21.4 AS cmdb-ui
 
 RUN mkdir /etc/nginx/html && rm -f /etc/nginx/conf.d/default.conf
 
