--- a/docker/Dockerfile-UI
+++ b/docker/Dockerfile-UI
@@ -9,7 +9,7 @@ WORKDIR /data/apps/cmdb-ui
 
 RUN sed -i "s#http://127.0.0.1:5000##g" .env && yarn install --ignore-engines  && yarn build
 
-FROM nginx:1.21.4 AS cmdb-ui
+FROM nginx:alpine AS cmdb-ui
 
 RUN mkdir /etc/nginx/html && rm -f /etc/nginx/conf.d/default.conf
 
