--- a/.github/workflows/docker-build-and-release.yaml
+++ b/.github/workflows/docker-build-and-release.yaml
@@ -13,6 +13,10 @@ env:
   # Use docker.io for Docker Hub if empty
   REGISTRY_SERVER_ADDRESS: ghcr.io/veops
 
+concurrency:
+  group: cmdb-docker-build-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
+
 jobs:
   setup-environment:
     timeout-minutes: 30
@@ -21,22 +25,8 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
-  release-images:
-    runs-on: ubuntu-latest
-    needs: [setup-environment]
-    permissions:
-      contents: read
-      packages: write
-    timeout-minutes: 90
-    env:
-      TAG: ${{ github.sha }}
-    steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
-      - uses: actions/setup-go@v5
-        with:
-          go-version: "1.21.8"
-          cache: false
       - name: Login to GitHub Package Registry
         uses: docker/login-action@v2
         with:
@@ -47,6 +37,16 @@ jobs:
         uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+  release-api-images:
+    runs-on: ubuntu-latest
+    needs: [setup-environment]
+    permissions:
+      contents: read
+      packages: write
+    timeout-minutes: 90
+    env:
+      TAG: ${{ github.sha }}
+    steps:
       - name: Build and push CMDB-API Docker image
         uses: docker/build-push-action@v6
         with:
@@ -55,6 +55,16 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ env.REGISTRY_SERVER_ADDRESS }}/cmdb-api:${{ env.TAG }}
+  release-ui-images:
+    runs-on: ubuntu-latest
+    needs: [setup-environment]
+    permissions:
+      contents: read
+      packages: write
+    timeout-minutes: 90
+    env:
+      TAG: ${{ github.sha }}
+    steps:
       - name: Build and push CMDB-UI Docker image
         uses: docker/build-push-action@v6
         with:
