--- a/.github/workflows/docker-build-and-release.yaml
+++ b/.github/workflows/docker-build-and-release.yaml
@@ -22,8 +22,14 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
-      - name: Checkout Repo
-        uses: actions/checkout@v4
+  release-api-images:
+    runs-on: ubuntu-latest
+    needs: [setup-environment]
+    permissions:
+      contents: read
+      packages: write
+    timeout-minutes: 90
+    steps:
       - name: Login to GitHub Package Registry
         uses: docker/login-action@v2
         with:
@@ -34,14 +40,6 @@ jobs:
         uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-  release-api-images:
-    runs-on: ubuntu-latest
-    needs: [setup-environment]
-    permissions:
-      contents: read
-      packages: write
-    timeout-minutes: 90
-    steps:
       - name: Build and push CMDB-API Docker image
         uses: docker/build-push-action@v6
         with:
@@ -58,6 +56,16 @@ jobs:
       packages: write
     timeout-minutes: 90
     steps:
+      - name: Login to GitHub Package Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       - name: Build and push CMDB-UI Docker image
         uses: docker/build-push-action@v6
         with:
