--- a/.github/workflows/docker-build-and-release.yaml
+++ b/.github/workflows/docker-build-and-release.yaml
@@ -18,6 +18,9 @@ jobs:
   setup-environment:
     timeout-minutes: 30
     runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v4
   release-api-images:
     runs-on: ubuntu-latest
     needs: [setup-environment]
