chore: update docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,6 +71,7 @@ services:
         flask cmdb-init-acl
         flask init-import-user-from-acl
         flask init-department
+        flask cmdb-patch -v 2.4.7
         flask cmdb-counter > counter.log 2>&1
     networks:
       new:
