--- a/cmdb-api/Pipfile
+++ b/cmdb-api/Pipfile
@@ -68,6 +68,7 @@ pycryptodomex = ">=3.19.0"
 lz4 = ">=4.3.2"
 python-magic = "==0.4.27"
 jsonpath = "==0.82.2"
+networkx = ">=3.1"
 
 [dev-packages]
 # Testing
