--- a/cmdb-api/Pipfile
+++ b/cmdb-api/Pipfile
@@ -11,7 +11,7 @@ click = ">=5.0"
 # Api
 Flask-RESTful = "==0.3.10"
 # Database
-Flask-SQLAlchemy = "==2.5.0"
+Flask-SQLAlchemy = "==3.0.5"
 SQLAlchemy = "==1.4.49"
 PyMySQL = "==1.1.0"
 redis = "==4.6.0"
@@ -69,6 +69,7 @@ lz4 = ">=4.3.2"
 python-magic = "==0.4.27"
 jsonpath = "==0.82.2"
 networkx = ">=3.1"
+ipaddress = ">=1.0.23"
 
 [dev-packages]
 # Testing
