--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,13 +41,14 @@ services:
           - redis
 
   cmdb-api:
-    image: registry.cn-hangzhou.aliyuncs.com/veops/cmdb-api:2.5.2
+    image: registry.cn-hangzhou.aliyuncs.com/veops/cmdb-api:2.5.3
     container_name: cmdb-api
     env_file:
       - .env
     environment:
       TZ: Asia/Shanghai
       WAIT_HOSTS: cmdb-db:3306, cmdb-cache:6379
+      SYSTEM_DEFAULT_LANGUAGE:  # en-US, zh-CN
     depends_on:
       cmdb-db:
         condition: service_healthy
@@ -84,7 +85,7 @@ services:
       test: "ps aux|grep -v grep|grep -v '1 root'|grep gunicorn || exit 1"
 
   cmdb-ui:
-    image: registry.cn-hangzhou.aliyuncs.com/veops/cmdb-ui:2.5.2
+    image: registry.cn-hangzhou.aliyuncs.com/veops/cmdb-ui:2.5.3
     container_name: cmdb-ui
     depends_on:
       cmdb-api:
