--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     volumes:
       - db-data:/var/lib/mysql
       - ./docs/mysqld.cnf:/etc/mysql/conf.d/mysqld.cnf
-      #- ./docs/cmdb.sql:/docker-entrypoint-initdb.d/cmdb.sql
+      - ./docs/cmdb.sql:/docker-entrypoint-initdb.d/cmdb.sql
     healthcheck:
       test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost", "-p$MYSQL_ROOT_PASSWORD"]
       interval: 10s
@@ -105,7 +105,7 @@ services:
     networks:
       - new
     ports:
-      - "8000:80"
+      - "8001:80"
 
 volumes:
   db-data:
