--- a/cmdb-ui/package.json
+++ b/cmdb-ui/package.json
@@ -87,5 +87,14 @@
     "true-case-path": "^2.2.1",
     "vue-svg-icon-loader": "^2.1.1",
     "webpack-theme-color-replacer": "^1.2.17"
+  },
+  "engines": {
+    "node": ">=16.0.0 <17.0.0",
+    "npm": ">=8.0.0",
+    "yarn": ">=1.22.0"
+  },
+  "resolutions": {
+    "minimatch": "^3.1.2",
+    "@achrinza/node-ipc": "^9.2.2"
   }
 }
